css/main.css
/* Ubuntu-ish Colour theme
   Dark brown - #332532
   Light brown - #644D52
   Peach - #F77A52
   sunshine - #FF974F
   grey blue - #A49A87
 */

 /* alternative theme including white
  offwhite - #f8f8f8
  cream - #f2e5bd
  apple - #b9bf83
  pear - #a69f7c
  chocolate - #8c6865
  black - #000000
 */

 /* lavender theme including white
  purple - #6765AD
  blue - #8FB0FF
  offwhite - #F8F8F8
  lightgreen - #89B28A
  darkgreen - #577043
  nearly black -#292929
 */

 /* scheme picked from image
 light blue 199 217 236 #C7D9EC
 navy blue  75 87 134  #4b5786
 desaturated blue 86 129 178 #96b1cf
 mid blue 144 189 230 #90bde6
 really dark blue 23, 55, 94 #17375e
 orange 249 166 74 #f9a64a
 dark brown 162 83 55 #a25337
nearly black #292929
 */

/* reset all margins and padding*/
 * {
    margin: 0;
    padding: 0;
    font-family: 'Rosario', sans-serif; !important;
}

body {
    background-color: #f8f8f8;
}

table {
    border-collapse: collapse;
    margin: 0 10px 0 10px;
}

th, td {
    text-align: left;
    padding: 4px;
}

tr:nth-child(even) {
    background-color: #f2f2ff;
}

tr:nth-child(odd) {
    background-color: #f8f8f8;
}

th.wrap {
    white-space;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 354px;
    background-color: #eaeaea;
}

h1 {
    color: #17375e;
    margin-left: 20px;
    margin-top: 20px;
    margin-bottom: 10px
}

p {
    color:#292929;
    margin-left: 20px;
    margin-bottom: 20px;
}

.buildcart {
    float: left;
}

.btn {
    border: none;
    background-color: inherit;
    padding: 4px 8px;
    font-size: 16px;
    cursor: pointer;
    display: inline-block;
}

/* On mouse-over */
.btn:hover {background: #eee;}

.success {color: green;}
.normal {color: #559eff;}
.info {color: dodgerblue;}
.warning {color: orange;}
.danger {color: red;}
.default {color: black;}

a {
    color: dodgerblue;
    text-decoration: none;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color:#96b1cf;
    position: fixed;
    top: 0;
    width: 100%;
}

nav li {
    float: left;
    border-right: 1px solid  #4b5786;
}

nav li:last-child {
    border-right: none;
}

nav li a {
    display: inline-block;
    color:  #4b5786;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

nav li a:hover {
    color: #f8f8f8;
}

.active {
    background-color: #f8f8f8;
    color: #4b5786;
}
a.active:hover{
    color: #4b5786;
}

.selected {
    background-color: #4b5786;
    color: #f8f8f8;
}
a.selected:hover{
    color: #879ced;
}

#container{width:900px;}
#left{float:left;width:215px;}
#right{float:right;width:215px;}
#center{margin:0 auto;width:215px;}

.bg{
    height: 480px;
    background-image: url("/img/misc/background.png");
    background-repeat: no-repeat;
    background-color: #292929;
}
.mainbody{
    padding-top: 75px;
}

.indent{
    margin-left: 30px;
}

.footer {
    color:#4b5786;
    margin-left: 20px;
}

/* from https://www.w3schools.com/w3css/4/w3.css */
.w3-input{
    padding:8px;
    display:block;
    border:none;
    border-bottom:1px solid #ccc;
    width:100%
}

.w3-border-0{
    border:0!important
}

.w3-border{
    border:1px solid #ccc!important
}
.w3-round-small{
    border-radius:2px
}
.w3-round,
.w3-round-medium{
    border-radius:4px
}
.w3-round-large{
    border-radius:8px
}
.w3-round-xlarge{
    border-radius:16px
}.w3-round-xxlarge{
    border-radius:32px
}

.w3-animate-input{
    transition:width 0.4s ease-in-out
}
.w3-animate-input:focus{
    width:100%!important
}

.search {
    padding: 8px 8px;
    display: inline-block;
    width: 350px;
}

.sticky {
    position: -webkit-sticky;
    position: sticky;
}

